Add Git Bash integration to README documentation
Co-authored-by: SpoiledPanda <200413559+SpoiledPanda@users.noreply.github.com>